[package]
name = "select_optimal_yaneuraou"
version = "1.0.0"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = { git = "https://github.com/HiraokaTakuya/rust-cpuid.git", version = "10.2.0" }
