[package]
name = "select_optimal_yaneuraou"
authors = ["HiraokaTakuya <hiraoka64@gmail.com>"]
version = "1.0.1"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = { git = "https://github.com/HiraokaTakuya/rust-cpuid.git", version = "10.2.0" }
